argocd/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-test
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: http
    host: argocd.k3s.ingenstans.se
  tls:
    - hosts:
      - argocd.k3s.ingenstans.se
      secretName: argocd-server-http-ingress-cert
